--- a/01 Diagnostico/index.html
+++ b/01 Diagnostico/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>
+        hola mundo maderfaker
+    </h1>
     <script src="scrtipt.js"></script>
 </body>
 </html>
