--- a/07_img/index.html
+++ b/07_img/index.html
@@ -10,20 +10,22 @@
 
 <body>
     <div class="container">
-        <p>GitHub Blocks</p>
+        <h1>GitHub Blocks</h1>
         <div class="mikoyan">
             <img src="imagenes/f-14.png">
             <img src="imagenes/f-15.png">
             <img src="imagenes/f-16.png">
         </div>
-        <div class="sukhoi"></div>
-        <img src="imagenes/f-18.png">
-        <img src="imagenes/f-22.png">
+        <div class="sukhoi">
+            <img src="imagenes/f-18.png">
+            <img src="imagenes/f-22.png">
+        </div>
         <div class="lockheed_martin">
             <img src="imagenes/f-35.png">
             <img src="imagenes/su-35.png">
             <img src="imagenes/typhoon.png">
         </div>
+        <p>imagen from <span style="color: rgb(146,198,216);">PNGWING</span></p>
     </div>
 </body>
 
