--- a/09_barra-navegacion/index.html
+++ b/09_barra-navegacion/index.html
@@ -15,7 +15,7 @@
             <li><a href="inicio">Inicio</a></li>
             <li><a href="mi_perfil" class="active">My Profile</a></li>
             <li><a href="conexion">Encontrar conexiones</a></li>
-            <li><button class="chao">Cerrar sesión</button></li>
+            <li><button class="chao">Sign Out</button></li>
         </ul>
     </nav>
 </body>
