--- a/10.1_perfil_usuario/index.html
+++ b/10.1_perfil_usuario/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil_usuarios</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="cyan">
+            <div class="imagen">
+                <img src="user.png">
+            </div>
+        </div>
+        <div class="nombre">
+            <h1>Benjamin Rios</h1>
+        </div>
+        <div class="ubicacion">
+            <img src="ondeetai.png" alt="ubicacion">
+            <h2>Seattle</h2>
+        </div>
+        <div class="atributos">
+            <h3>Developer | Enginer | Promblem solver</h3>
+            <h4>Master of shadows and the internet!</h4>
+        </div>
+        <div class="confguracion">
+            <img src="tuerka.png" alt="configuration">
+            <h5>Edit Porfile</h5>
+        </div>
+    </div>
 </body>
+
 </html>
