--- a/10.1_perfil_usuario/index.html
+++ b/10.1_perfil_usuario/index.html
@@ -15,20 +15,23 @@
                 <img src="user.png">
             </div>
         </div>
-        <div class="nombre">
-            <h1>Benjamin Rios</h1>
-        </div>
-        <div class="ubicacion">
-            <img src="ondeetai.png" alt="ubicacion">
-            <h2>Seattle</h2>
-        </div>
-        <div class="atributos">
-            <h3>Developer | Enginer | Promblem solver</h3>
-            <h4>Master of shadows and the internet!</h4>
-        </div>
-        <div class="confguracion">
-            <img src="tuerka.png" alt="configuration">
-            <h5>Edit Porfile</h5>
+        <div class="miniContainer">
+
+            <div class="nombre">
+                <h1>Benjamin Rios</h1>
+            </div>
+            <div class="row ubicacion">
+                <img src="ondeetai.png" alt="ubicacion">
+                <h2>Seattle</h2>
+            </div>
+            <div class="row atributos">
+                <h3>Developer | Enginer | Promblem solver</h3>
+                <h4>Master of shadows and the internet!</h4>
+            </div>
+            <div class=" row confguracion">
+                <img src="tuerka.png" alt="configuration">
+                <h5>Edit Porfile</h5>
+            </div>
         </div>
     </div>
 </body>
