--- a/10.1_perfil_usuario/index.html
+++ b/10.1_perfil_usuario/index.html
@@ -12,25 +12,24 @@
     <div class="container">
         <div class="cyan">
             <div class="imagen">
-                <img src="user.png">
+                <img src="img/user.png">
             </div>
         </div>
         <div class="miniContainer">
-
             <div class="nombre">
                 <h1>Benjamin Rios</h1>
             </div>
             <div class="row ubicacion">
-                <img src="ondeetai.png" alt="ubicacion">
+                <img src="img/ondeetai.png">
                 <h2>Seattle</h2>
             </div>
             <div class="row atributos">
-                <h3>Developer | Enginer | Promblem solver</h3>
-                <h4>Master of shadows and the internet!</h4>
+                <p>Developer | Enginer | Promblem solver</p>
             </div>
-            <div class=" row confguracion">
-                <img src="tuerka.png" alt="configuration">
-                <h5>Edit Porfile</h5>
+            <p>Master of shadows and the internet!</p>
+            <div class="confguracion">
+                <img src="img/tuerka.png">
+                <p>Edit Porfile</p>
             </div>
         </div>
     </div>
