--- a/10.1_perfil_usuario/index.html
+++ b/10.1_perfil_usuario/index.html
@@ -25,11 +25,10 @@
             </div>
             <div class="row atributos">
                 <p>Developer | Enginer | Promblem solver</p>
+                   <p> Master of shadows and the internet!</p>
             </div>
-            <p>Master of shadows and the internet!</p>
-            <div class="confguracion">
-                <img src="img/tuerka.png">
-                <p>Edit Porfile</p>
+            <div class="row confguracion">
+              <p><img src="img/tuerka.png" class="tuercaIMG"><a href="#"> Edit Porfile</a></p>
             </div>
         </div>
     </div>
