sigamos_con_flex

--- a/11.2_sigamos_con_flex/index.html
+++ b/11.2_sigamos_con_flex/index.html
@@ -17,20 +17,23 @@
         <div class="main">
             <div class="cuadroP">
                 <h2 class="text">Domina flexbox y diseña con estilo</h2>
-                <p class="text">Aprender a estructurar tus sitios web de manera eficiente y profecional con css flexbox</p>
+                <p class="text2">Aprender a estructurar tus sitios web de manera eficiente y profecional con css flexbox</p>
             </div>
-            <div class="cuadroS">
-                <h2 class="text">flexibilidad total</h2>
-                <p class="text">crea diseños dinamicos que de adapten a cualquier pantalla</p>
+            <div class="main-2">
+                <div class="cuadro">
+                    <h2 class="text">flexibilidad total</h2>
+                    <p class="text2">crea diseños dinamicos que de adapten a cualquier pantalla</p>
+                </div>
+                <div class="cuadro">
+                    <h2 class="text">Alineacion perfecta</h2>
+                    <p class="text2">Distribuye los elementos de forma precisa con justify-content.</p>
+                </div>
+                <div class="cuadro">
+                    <h2 class="text">Optimizacion</h2>
+                    <p class="text2" >Evita hacks innecesarios y usa CSS de manera eficiente</p>
+                </div>
             </div>
-            <div class="cuadroT">
-                <h2 class="text">Alineacion perfecta</h2>
-                <p class="text">Distribuye los elementos de forma precisa con justify-content.</p>
-            </div>
-            <div class="cuadroC">
-                <h2 class="text">Optimizacion</h2>
-                <p class="text" >Evita hacks innecesarios y usa CSS de manera eficiente</p>
-            </div>
+            
         </div>
     </div>
 </body>
