--- a/perfil_simpsons/index.html
+++ b/perfil_simpsons/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simpsons</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
-        <div class="footo_P"></div>
+        <div class="main">
+            <img class="gatoloko" src="img/descarga.jpeg">
+            <div class="info">
+                <h1>Benjamin Rios</h1>
+                <h2>Desarrollador Web</h2>
+                <p>Apasionado por el diseño web y la tecnologia <br> Siempre en busca de nuevos retos.</p>
+            </div>
+            <div class="enlaces">
+                <a href="#">Github</a>
+                <a href="#">Linkedin</a>
+            </div>
+            <div class="boton">
+                <button>conectar</button>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
