--- a/prueba_01/index.html
+++ b/prueba_01/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
-        
+        <div class="main">
+            <div class="izquierdo">
+                <h1>jeni Kim</h1>
+                <button class="inicio">home</button>
+                <p>ILLUSTRATIONS</p>
+                <button class="ilustracion">Doodles</button>
+                <button class="ilustracion">People</button>
+                <button class="ilustracion">Corporate</button>
+                <button class="ilustracion">Graphics</button>
+                <button class="ilustracion">Icons</button>
+                <button class="ilustracion">Miscellaneous</button>
+                <h3>Info</h3>
+                <button class="IFN">About</button>
+                <button class="IFN">contact</button>
+            </div>
+            <div class="derecho">
+                <div class="titulo">
+                    <h1>Let's Work Together!</h1>
+                    <p>custom illustration can make all the diference when marketing your brand.</p>
+                </div>
+                <div class="imagenes">
+                    <img src="img/Captura de pantalla 2025-04-22 083832.png">
+                    <img src="img/Captura de pantalla 2025-04-22 083853.png">
+                    <img src="img/Captura de pantalla 2025-04-22 083907.png">
+                    <img src="img/Captura de pantalla 2025-04-22 083938.png">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
