--- a/prueba_01/index.html
+++ b/prueba_01/index.html
@@ -15,7 +15,7 @@
                 <h1>jeni Kim</h1>
                 <button class="inicio">home</button>
                 <p>ILLUSTRATIONS</p>
-                <button class="ilustracion">Doodles</button>
+                <p class="ilustracion">Doodles</p>
                 <button class="ilustracion">People</button>
                 <button class="ilustracion">Corporate</button>
                 <button class="ilustracion">Graphics</button>
