--- a/prueba_01/index.html
+++ b/prueba_01/index.html
@@ -13,17 +13,17 @@
         <div class="main">
             <div class="izquierdo">
                 <h1>jeni Kim</h1>
-                <button class="inicio">home</button>
-                <p>ILLUSTRATIONS</p>
+                <p class="inicio">home</p>
+                <h4>ILLUSTRATIONS</h4>
                 <p class="ilustracion">Doodles</p>
-                <button class="ilustracion">People</button>
-                <button class="ilustracion">Corporate</button>
-                <button class="ilustracion">Graphics</button>
-                <button class="ilustracion">Icons</button>
-                <button class="ilustracion">Miscellaneous</button>
-                <h3>Info</h3>
-                <button class="IFN">About</button>
-                <button class="IFN">contact</button>
+                <p class="ilustracion">People</p>
+                <p class="ilustracion">Corporate</p>
+                <p class="ilustracion">Graphics</p>
+                <p class="ilustracion">Icons</p>
+                <p class="ilustracion">Miscellaneous</p>
+                <h4>Info</h4>
+                <p class="IFN">About</p>
+                <p class="IFN">contact</p>
             </div>
             <div class="derecho">
                 <div class="titulo">
@@ -31,10 +31,26 @@
                     <p>custom illustration can make all the diference when marketing your brand.</p>
                 </div>
                 <div class="imagenes">
-                    <img src="img/Captura de pantalla 2025-04-22 083832.png">
-                    <img src="img/Captura de pantalla 2025-04-22 083853.png">
-                    <img src="img/Captura de pantalla 2025-04-22 083907.png">
-                    <img src="img/Captura de pantalla 2025-04-22 083938.png">
+                    <div class="Pri">
+                    <img class="foto1" src="img/Captura de pantalla 2025-04-22 083832.png">
+                    <h1 class="numeros">01</h1>
+                    <p class="OG">ADVERTING</p>
+                </div>
+                <div class="seg">
+                    <img class="foto2" src="img/Captura de pantalla 2025-04-22 083853.png">
+                    <h1 class="numeros">02</h1>
+                    <P class="OG">CONTENT MARKETING</P>
+                </div>
+                <div class="ter">
+                    <img class="foto3" src="img/Captura de pantalla 2025-04-22 083907.png">
+                    <h1 class="numeros">03</h1>
+                    <P class="OG">SOCIAL MEDIA</P>
+                </div>
+                <div class="cuar">
+                    <img class="foto4" src="img/Captura de pantalla 2025-04-22 083938.png">
+                    <h1 class="numeros">04</h1>
+                    <P class="OG">ANIMATION</P>
+                </div>
                 </div>
             </div>
         </div>
