--- a/prueba_01/index.html
+++ b/prueba_01/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="container">
-        <div class="main">
-            <div class="izquierdo">
+        <div class="main"> <!-- cuadro que contiene todo  -->
+            <div class="izquierdo"> <!-- lado izquierdo que contiene el nombre etc -->
                 <h1>jeni Kim</h1>
                 <p class="inicio">home</p>
                 <h4>ILLUSTRATIONS</h4>
@@ -25,12 +25,12 @@
                 <p class="IFN">About</p>
                 <p class="IFN">contact</p>
             </div>
-            <div class="derecho">
+            <div class="derecho"> <!-- parte derecha que contiene el titulo -->
                 <div class="titulo">
                     <h1>Let's Work Together!</h1>
                     <p>custom illustration can make all the diference when marketing your brand.</p>
                 </div>
-                <div class="imagenes">
+                <div class="imagenes"> <!-- sector de fotos -->
                     <div class="Pri">
                     <img class="foto1" src="img/Captura de pantalla 2025-04-22 083832.png">
                     <h1 class="numeros">01</h1>
