--- a/13_4_interfaz de solicitudes y conexiones/index.html
+++ b/13_4_interfaz de solicitudes y conexiones/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>interface</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="main-top">
+                <div class="superior-top">
+                    <h1 class="title">Solicitudes de Conexion</h1>
+                    <button>Ver Todas</button>
+                </div>
+                <div class="users">
+                    <h3>Steve Jobs</h3>
+                    <h3>Bill Gates</h3>
+                    <img src="img/user-icon.png">
+                    <img src="img/user-icon.png">
+                </div>
+                <div class="check">
+                    <img src="img/check-icon.png">
+                    <img src="img/delete-1-icon.png">
+                </div>
+        </div>
+    </div>
 </body>
+
 </html>
