--- a/13_4_interfaz de solicitudes y conexiones/index.html
+++ b/13_4_interfaz de solicitudes y conexiones/index.html
@@ -10,21 +10,37 @@
 
 <body>
     <div class="container">
-        <div class="main-top">
-                <div class="superior-top">
-                    <h1 class="title">Solicitudes de Conexion</h1>
-                    <button>Ver Todas</button>
-                </div>
+        <div class="mains">
+            <div class="superior-top">
+                <h1 class="title">Solicitudes de Conexion</h1>
+                <button>Ver Todas</button>
+            </div>
+            <div class="fusion">
                 <div class="users">
-                    <h3>Steve Jobs</h3>
-                    <h3>Bill Gates</h3>
-                    <img src="img/user-icon.png">
-                    <img src="img/user-icon.png">
+                    <h3> <span><img src="img/user-icon.png" class="goals"></span>Steve Jobs</h3>
+                    <h3> <span><img src="img/user-icon.png" class="goals"></span>Bill Gates</h3>
                 </div>
                 <div class="check">
-                    <img src="img/check-icon.png">
-                    <img src="img/delete-1-icon.png">
+                    <img src="img/check-icon.png" class="mause">
+                    <img src="img/delete-1-icon.png" class="mause">
+                    <img src="img/check-icon.png" class="mause">
+                    <img src="img/delete-1-icon.png" class="mause">
                 </div>
+            </div>
+        </div>
+        <div class="mains">
+            <div class="superior-top">
+                <h1 class="title2">Tus Conexiones</h1>
+                <button>Ver todas</button>
+            </div>
+            <div class="fusion">
+                <div class="users2">
+                    <h3> <span><img src="img/user-icon.png" class="goals"></span>Richard Stallman</h3>
+                    <h3> <span><img src="img/user-icon.png" class="goals"></span>Linus Torvalds</h3>
+                    <h3> <span><img src="img/user-icon.png" class="goals"></span>Ada lovelace</h3>
+                    <h3> <span><img src="img/user-icon.png" class="goals"></span>Grace Hopper</h3>
+                </div>
+            </div>
         </div>
     </div>
 </body>
