--- a/CSS/13_4_interfaz de solicitudes y conexiones/index.html
+++ b/CSS/13_4_interfaz de solicitudes y conexiones/index.html
@@ -34,7 +34,7 @@
                 <button>Ver todas</button>
             </div>
             <div class="fusion">
-                <div class="users2">
+                <div class="users">
                     <h3> <span><img src="img/user-icon.png" class="goals"></span>Richard Stallman</h3>
                     <h3> <span><img src="img/user-icon.png" class="goals"></span>Linus Torvalds</h3>
                     <h3> <span><img src="img/user-icon.png" class="goals"></span>Ada lovelace</h3>
