--- a/CSS/13_4_interfaz de solicitudes y conexiones/index.html
+++ b/CSS/13_4_interfaz de solicitudes y conexiones/index.html
@@ -10,25 +10,29 @@
 
 <body>
     <div class="container">
-        <div class="mains">
+        <div class="main1">
             <div class="superior-top">
                 <h1 class="title">Solicitudes de Conexion</h1>
                 <button>Ver Todas</button>
             </div>
             <div class="fusion">
-                <div class="users">
+                <div class="row">
                     <h3> <span><img src="img/user-icon.png" class="goals"></span>Steve Jobs</h3>
-                    <h3> <span><img src="img/user-icon.png" class="goals"></span>Bill Gates</h3>
+                    <div class="check">
+                        <img src="img/check-icon.png" class="mause">
+                        <img src="img/delete-1-icon.png" class="mause">
+                    </div>
                 </div>
-                <div class="check">
-                    <img src="img/check-icon.png" class="mause">
-                    <img src="img/delete-1-icon.png" class="mause">
-                    <img src="img/check-icon.png" class="mause">
-                    <img src="img/delete-1-icon.png" class="mause">
+                <div class="row">
+                    <h3> <span><img src="img/user-icon.png" class="goals"></span>Bill Gates</h3>
+                    <div class="check">
+                        <img src="img/check-icon.png" class="mause">
+                        <img src="img/delete-1-icon.png" class="mause">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="mains">
+        <div class="main2">
             <div class="superior-top">
                 <h1 class="title2">Tus Conexiones</h1>
                 <button>Ver todas</button>
