--- a/js/02_arrays/Ejercicio_1_Promedio_de_valores/index.html
+++ b/js/02_arrays/Ejercicio_1_Promedio_de_valores/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ejemplo</title>
+    <title>promedio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <p>Mostrar un día de la semana desde un arreglo</p>
-        <button onclick="mostrarDia()">Mostrar Día</button>
+        <p>Promedio de los 3 primeros elementos de un arreglo</p>
+        <button onclick="promedioTresPrimeros()">Calcular Promedio</button>
     </div>
     <script src="script.js"></script>
 </body>
