--- a/js/01_introduccion_js_tipo_datos/index.html
+++ b/js/01_introduccion_js_tipo_datos/index.html
@@ -3,18 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 introduccion js</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Tipos de Datos en JavaScript</title>
 </head>
 
 <body>
-    <header>
-        <h1>introduccion JS</h1>
-    </header>
-</body>
-<script src="script.js">
 
-</script>
+    <h1>Revisa la consola del navegador</h1>
+
+    <script src="script.js"></script>
+</body>
 
 </html>
