--- a/CSS/14_4_practica_lo_aprendido/index.html
+++ b/CSS/14_4_practica_lo_aprendido/index.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practica</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        
+    <nav class="nav">
+        <h1 class="nav-title">Perfil</h1>
+        <ul class="nav-links">
+            <li><a href="inicio">Inicio</a></li>
+            <li><a href="mi_perfil" class="active">My Profile</a></li>
+            <li><a href="conexion">Encontrar conexiones</a></li>
+            <li><button class="chao">Sign Out</button></li>
+        </ul>
+    </nav>
+
+    <div class="container1">
+        <div class="main">
+            <img class="gatoloko" src="img/descarga.jpeg">
+            <div class="info">
+                <h1>Benjamin Rios</h1>
+                <h2>Desarrollador Web</h2>
+                <p>Apasionado por el diseño web y la tecnologia <br> Siempre en busca de nuevos retos.</p>
+            </div>
+            <div class="enlaces">
+                <a href="#">Github</a>
+                <a href="#">Linkedin</a>
+            </div>
+            <div class="boton">
+                <button>conectar</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-2">
+        <div class="main1">
+            <div class="superior-top">
+                <h1 class="title">Solicitudes de Conexion</h1>
+                <button>Ver Todas</button>
+            </div>
+            <div class="fusion">
+                <div class="row">
+                    <h3> <span><img src="img_IN/user-icon.png" class="goals"></span>Steve Jobs</h3>
+                    <div class="check">
+                        <img src="img_IN/check-icon.png" class="mause">
+                        <img src="img_IN/delete-1-icon.png" class="mause">
+                    </div>
+                </div>
+                <div class="row">
+                    <h3> <span><img src="img_IN/user-icon.png" class="goals"></span>Bill Gates</h3>
+                    <div class="check">
+                        <img src="img_IN/check-icon.png" class="mause">
+                        <img src="img_IN/delete-1-icon.png" class="mause">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main2">
+            <div class="superior-top">
+                <h1 class="title2">Tus Conexiones</h1>
+                <button>Ver todas</button>
+            </div>
+            <div class="fusion">
+                <div class="users">
+                    <h3> <span><img src="img_IN/user-icon.png" class="goals"></span>Richard Stallman</h3>
+                    <h3> <span><img src="img_IN/user-icon.png" class="goals"></span>Linus Torvalds</h3>
+                    <h3> <span><img src="img_IN/user-icon.png" class="goals"></span>Ada lovelace</h3>
+                    <h3> <span><img src="img_IN/user-icon.png" class="goals"></span>Grace Hopper</h3>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
