--- a/CSS/15_5_Perfil basado en tarea anterior/Perfil.html
+++ b/CSS/15_5_Perfil basado en tarea anterior/Perfil.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil propio</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <div class="container">
-        <div class="perfilU">
-            <img src="perfil/75aa4fb9056d233701187e3cd6ab687d.jpg">
+        <div class="main">
+            <img class="foto" src="perfil/75aa4fb9056d233701187e3cd6ab687d.jpg">
+            <div class="info">
+                <h1>Benjamin Rios</h1>
+                <h2>santiago <br> chile</h2>
+                <p>Estudiante de programacion <br> lenguajes de programacion : <br> HTML <br> CSS <br> javascript <br> phyton</p>
+            </div>
+            <div class="boton">
+                <button>Editar Perfil</button>
+                <button>Solicitudes de conexión</button>
+                <button>Tus conexiones</button>
+            </div>
         </div>
-
-        <div class="info">
-            <h1> Benjamin Nicolas Rios Valdes</h1>
-            <h3> Pais: Chile</h3>
-            <h3> rol: Estudiante de programación</h3>
-            <h3> Conocimiento: phyton, C#, html, css, java script </h3>
-            <button>Editar Perfil</button>
-            <button>solicitud de conecexion</button>
-            <button>Tus Conexiones </button>
-        </div>
-
     </div>
 </body>
+
 </html>
