--- a/CSS/15_5_Perfil basado en tarea anterior/Perfil.html
+++ b/CSS/15_5_Perfil basado en tarea anterior/Perfil.html
@@ -10,17 +10,24 @@
 
 <body>
     <div class="container">
-        <div class="main">
+        <div class="main1">
             <img class="foto" src="perfil/75aa4fb9056d233701187e3cd6ab687d.jpg">
             <div class="info">
                 <h1>Benjamin Rios</h1>
                 <h2>santiago <br> chile</h2>
-                <p>Estudiante de programacion <br> lenguajes de programacion : <br> HTML <br> CSS <br> javascript <br> phyton</p>
+                <p>Estudiante de programacion <br> lenguajes de programacion : <br> HTML <br> CSS <br> javascript <br>
+                    phyton</p>
             </div>
             <div class="boton">
                 <button>Editar Perfil</button>
                 <button>Solicitudes de conexión</button>
                 <button>Tus conexiones</button>
+            </div>
+            <div class="conexiones">
+                <h2>conexiones </h2>
+                <h3 class="conect">mark orsini: desarollador jefe </h3>
+                <h3 class="conect"> mariangel pirona: equipo de desarrollo </h3>
+                <h3 class="conect"> marcell figueroa: equipo de desarrollo </h3>
             </div>
         </div>
     </div>
