--- a/04_manipulacion_array/ejemplo/index.html
+++ b/04_manipulacion_array/ejemplo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo - Manipulación de Array</title>
-    <link rel="stylesheet" href="static/CSS/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <header class="nav">
@@ -17,6 +17,6 @@
         <button class="btn" onclick="usarShift()">shift</button>
     </main>
 
-    <script src="static/JS/script.js"></script>
+    <script src="static/js/script.js"></script>
 </body>
 </html>
