--- a/js/04_manipulacion_array/ejemplo_resuelto/ejercicio_1/index.html
+++ b/js/04_manipulacion_array/ejemplo_resuelto/ejercicio_1/index.html
@@ -11,7 +11,8 @@
         <h1>Manipulación de Arrays</h1>
     </header>
     <main class="container">
-        <button class="btn" onclick="usarPush()">push</button>
+        <p>ejercicion 1</p>
+        <button class="btn" onclick="listacompras()">lista de compras</button>
         <button class="btn" onclick="usarPop()">pop</button>
         <button class="btn" onclick="usarUnshift()">unshift</button>
         <button class="btn" onclick="usarShift()">shift</button>
