--- a/js/04_manipulacion_array/ejemplo_resuelto/ejercicio_1/index.html
+++ b/js/04_manipulacion_array/ejemplo_resuelto/ejercicio_1/index.html
@@ -13,7 +13,7 @@
     <main class="container">
         <p>ejercicion 1</p>
         <button class="btn" onclick="listacompras()">lista de compras</button>
-        <button class="btn" onclick="usarPop()">pop</button>
+        <button class="btn" onclick="quitar()">eliminar producto </button>
         <button class="btn" onclick="usarUnshift()">unshift</button>
         <button class="btn" onclick="usarShift()">shift</button>
     </main>
