--- a/js/04_manipulacion_array/ejemplo_resuelto/ejercicio_1/index.html
+++ b/js/04_manipulacion_array/ejemplo_resuelto/ejercicio_1/index.html
@@ -13,11 +13,18 @@
     <main class="container">
         <p>ejercicion 1</p>
         <button class="btn" onclick="listacompras()">lista de compras</button>
-        <button class="btn" onclick="quitar()">eliminar producto </button>
-        <button class="btn" onclick="usarUnshift()">unshift</button>
-        <button class="btn" onclick="usarShift()">shift</button>
+        <button class="btn" onclick="quitar_elemento()">eliminar producto </button>
+        <button class="btn" onclick="agregarcolor()">agegar color </button>
+        <button class="btn" onclick="eliminar_color()">eliminar el primero color</button>
+        <button class="btn" onclick="agregar_numeros()">agregar numeros</button>
+        <button class="btn" onclick="cambiar()">cambiar</button>
+        <button class="btn" onclick="cambiar()">cambiar</button>
+        <button class="btn" onclick="cambiar()">cambiar</button>
+        
     </main>
 
     <script src="static/JS/script.js"></script>
 </body>
 </html>
+
+
