--- a/js/04 manipulacion array/ejemplo_resuelto/ejercicio_1/index.html
+++ b/js/04 manipulacion array/ejemplo_resuelto/ejercicio_1/index.html
@@ -17,7 +17,7 @@
         <button class="btn" onclick="agregarcolor()">agegar color </button>
         <button class="btn" onclick="eliminar_color()">eliminar el primero color</button>
         <button class="btn" onclick="agregar_numeros()">agregar numeros</button>
-        <button class="btn" onclick="cambiar()">cambiar</button>
+        <button class="btn" onclick="agregarOrdenInverso()"> agregar orden inverso</button>
         <button class="btn" onclick="cambiar()">cambiar</button>
         <button class="btn" onclick="cambiar()">cambiar</button>
         
