--- a/js/05 condiciones if else/index.html
+++ b/js/05 condiciones if else/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>condiciones if else</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
@@ -16,6 +16,10 @@
         <p>ejercicio 1</p>
         <button class="btn" onclick="mayoriaEdad()">MayorEdad</button>
         <div class="resultado" id="resultado"></div>
+
+        <p>ejercicio 2</p>
+        <button class="btn" onclick="AñadirProductos()">Añadir Productos</button>
+        <div class="resultado2" id="resultado2"></div>
     </main>
     <script src="static/js/script.js"></script>
 </body>
