--- a/js/05 condiciones if else/index.html
+++ b/js/05 condiciones if else/index.html
@@ -4,24 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>condiciones if else</title>
+    <title>Introduction to Js</title>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
-    <header class="nav">
-        <h1>ejercicios if - elese</h1>
+    <header>
+        <h1 class="title">Exercises If - Else in Js 📌</h1>
+        <p>My profile → <a href="https://github.com/Marcell-Figueroa1" class="profile">Here</a></p>
     </header>
-    <main class="container">
-        <p>ejercicio 1</p>
-        <button class="btn" onclick="mayoriaEdad()">MayorEdad</button>
-        <div class="resultado" id="resultado"></div>
 
-        <p>ejercicio 2</p>
-        <button class="btn" onclick="AñadirProductos()">Añadir Productos</button>
-        <div class="resultado2" id="resultado2"></div>
-    </main>
-    <script src="static/js/script.js"></script>
+    <div class="container">
+        <div class="containerCajas">
+            <div class="box">
+                <p class="text">ejercicio 1<br><br>↓</p>
+                <button class="btn" onclick="contarHastaN()">contar de 1 a N</button>
+            </div>
+
+            <div class="box">
+                <p class="text">ejercicio 2 <br><br>↓</p>
+                <button class="btn" onclick="AñadirProductos()">añadir productos</button>
+            </div>
+
+            <div class="box">
+                <p class="text">ejercicio 3 <br><br>↓</p>
+                <button class="btn" onclick="Controldetareas()">contro de tareas</button>
+            </div>
+
+            <p class="text">Click on the buttons to see the results.</p>
+        </div>
+
+        <script src="/js/05 condiciones if else/static/js/script.js"></script>
+    </div>
+    <div class="resultado" id="resultado"></div>
+
 </body>
 
 </html>
