--- a/js/06 bucles for while/index.html
+++ b/js/06 bucles for while/index.html
@@ -23,7 +23,7 @@
 
             <div class="box">
                 <p class="text">ejercicio 2 <br><br>↓</p>
-                <button class="btn" onclick="AñadirProductos()">añadir productos</button>
+                <button class="btn" onclick="SumaDe5Números()">Suma De 5 Numeros</button>
             </div>
 
             <div class="box">
@@ -34,7 +34,7 @@
             <p class="text">Click on the buttons to see the results.</p>
         </div>
 
-        <script src="/js/05 condiciones if else/static/js/script.js"></script>
+        <script src="/js/06 bucles for while/static/js/script.js"></script>
     </div>
     <div class="resultado" id="resultado"></div>
 
