--- a/js/06 bucles for while/index.html
+++ b/js/06 bucles for while/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <h1 class="title">Exercises If - Else in Js 📌</h1>
-        <p>My profile → <a href="https://github.com/Marcell-Figueroa1" class="profile">Here</a></p>
+        <h1 class="title">Ejercicio If - Else en Js 📌</h1>
+        <p>My profile → <a href="https://github.com/FallNxiko" class="profile">Here</a></p>
     </header>
 
     <div class="container">
