--- a/js/06 bucles for while/index.html
+++ b/js/06 bucles for while/index.html
@@ -28,7 +28,7 @@
 
             <div class="box">
                 <p class="text">ejercicio 3 <br><br>↓</p>
-                <button class="btn" onclick="Controldetareas()">contro de tareas</button>
+                <button class="btn" onclick="NumerosPares()">contro de tareas</button>
             </div>
 
             <p class="text">Click on the buttons to see the results.</p>
