--- a/js/06 bucles for while/static/index.html
+++ b/js/06 bucles for while/static/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to Js</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="/js/06 bucles for while/static/css/style.css">
 </head>
 
 <body>
