--- a/js/06 bucles for while/static/index.html
+++ b/js/06 bucles for while/static/index.html
@@ -28,10 +28,15 @@
 
             <div class="box">
                 <p class="text">ejercicio 3 <br><br>↓</p>
-                <button class="btn" onclick="NumerosPares()">contro de tareas</button>
+                <button class="btn" onclick="NumerosPares()">Mostrar Numeros Pares del 1 al 20</button>
             </div>
 
-            <p class="text">Click on the buttons to see the results.</p>
+            <div class="box">
+                <p class="text">ejercicio 4 <br><br>↓</p>
+                <button class="btn" onclick="CuentaRegresiva()">contro de tareas</button>
+            </div>
+
+            <p class="text">clic en los botones para ver el resultado.</p>
         </div>
 
         <script src="/js/06 bucles for while/static/js/script.js"></script>
