--- a/js/06 bucles for while/static/index.html
+++ b/js/06 bucles for while/static/index.html
@@ -36,6 +36,11 @@
                 <button class="btn" onclick="CuentaRegresiva()">contro de tareas</button>
             </div>
 
+            <div class="box">
+                <p class="text">ejercicio 5 <br><br>↓</p>
+                <button class="btn" onclick="TablasDeMultiplicar()">contro de tareas</button>
+            </div>
+
             <p class="text">clic en los botones para ver el resultado.</p>
         </div>
 
