--- a/js/05 condiciones if else/index.html
+++ b/js/05 condiciones if else/index.html
@@ -18,7 +18,7 @@
         <div class="containerCajas">
             <div class="box">
                 <p class="text">ejercicio 1<br><br>↓</p>
-                <button class="btn" onclick="contarHastaN()">contar de 1 a N</button>
+                <button class="btn" onclick="MayoriaEdad()">contar de 1 a N</button>
             </div>
 
             <div class="box">
