--- a/js/06 bucles for while/static/index.html
+++ b/js/06 bucles for while/static/index.html
@@ -43,11 +43,11 @@
 
             <p class="text">clic en los botones para ver el resultado.</p>
         </div>
-
-        <script src="/js/06 bucles for while/static/js/script.js"></script>
     </div>
-    <div class="resultado" id="resultado"></div>
-
+    <div class="row">
+        <div class="resultado" id="resultado"></div>
+    </div>
+    <script src="/js/06 bucles for while/static/js/script.js"></script>
 </body>
 
 </html>
