--- a/js/012 Evaluación 29-07 - JS/static/index.html
+++ b/js/012 Evaluación 29-07 - JS/static/index.html
@@ -18,33 +18,9 @@
         <div class="containerCajas">
             <div class="box">
                 <p class="text">ejercicio 1<br><br>↓</p>
-                <button class="btn" onclick="MostrarPalabra()">contar de 1 a N</button>
+                <button class="btn" onclick="calcularProducto()">contar de 1 a N</button>
                 <input type="text" name="" id ="input1" placeholder="Ingresar una palabra"class="input">
                 <div class="resultado" id="resultado1"></div>
-            </div>
-
-            <div class="box">
-                <p class="text">ejercicio 2 <br><br>↓</p>
-                <button class="btn" onclick="SumaDe5Números()">Suma De 5 Numeros</button>
-                <div class="resultado" id="resultado2"></div>
-            </div>
-
-            <div class="box">
-                <p class="text">ejercicio 3 <br><br>↓</p>
-                <button class="btn" onclick="NumerosPares()">Mostrar Numeros Pares del 1 al 20</button>
-                <div class="resultado" id="resultado3"></div>
-            </div>
-
-            <div class="box">
-                <p class="text">ejercicio 4 <br><br>↓</p>
-                <button class="btn" onclick="CuentaRegresiva()">contro de tareas</button>
-                <div class="resultado" id="resultado4"></div>
-            </div>
-
-            <div class="box">
-                <p class="text">ejercicio 5 <br><br>↓</p>
-                <button class="btn" onclick="TablasDeMultiplicar()">contro de tareas</button>
-                <div class="resultado" id="resultado5"></div>
             </div>
 
             <p class="text">clic en los botones para ver el resultado.</p>
