--- a/js/012 Evaluación 29-07 - JS/static/index.html
+++ b/js/012 Evaluación 29-07 - JS/static/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to Js</title>
-    <link rel="stylesheet" href="/js/06 bucles for while/static/css/style.css">
+    <link rel="stylesheet" href="/012 Evaluación 29-07 - JS/static/css/style.css">
 </head>
 
 <body>
@@ -18,8 +18,7 @@
         <div class="containerCajas">
             <div class="box">
                 <p class="text">ejercicio 1<br><br>↓</p>
-                <button class="btn" onclick="calcularProducto()">contar de 1 a N</button>
-                <input type="text" name="" id ="input1" placeholder="Ingresar una palabra"class="input">
+                <button class="btn" onclick="mostrarNumerosPar()">contar de 1 a N</button>
                 <div class="resultado" id="resultado1"></div>
             </div>
 
@@ -29,7 +28,7 @@
     <div class="row">
         
     </div>
-    <script src="/js/06 bucles for while/static/js/script.js"></script>
+    <script src="/012 Evaluación 29-07 - JS/static/js/script.js"></script>
 </body>
 
 </html>
